--- a/style.css
+++ b/style.css
@@ -12,11 +12,12 @@ html {
 body {
     font-family: sans-serif;
     font-weight: 500;
+    color: #fff;
     height: 100%;
     width: 100vw;
     overflow: hidden;
-    background-color: rgb(53, 52, 52);
-    /* background-image: linear-gradient(to top left, #7d6cb5, #6f07f7); */
+    /* background-color: rgb(53, 52, 52); */
+    background-image: linear-gradient(to top left, #7d6cb5, #6f07f7);
     /* border: 2px solid red; */
     /* background-color: ; */
 }
@@ -30,15 +31,16 @@ button:active,
 .close-btn:active {
     transform: translateY(2px);
 }
+
 /* ---------------------------------TOP PART--------------------------------------- */
 header {
     display: flex;
     flex-direction: column;
     /* flex-wrap: wrap; */
-    /* justify-content: space-between */
-    ;
-    height: 30%;
+    /* justify-content: space-between */;
+    height: 35%;
     font-size: 1.8rem;
+    /* outline: 2px solid red; */
 }
 .first-division {
     display: flex;
@@ -78,6 +80,7 @@ header {
 }
 .range:hover {
     border-bottom: 4px solid #6f07f7;
+    width: 18.78rem;
 }
 .between {
     display: block;
@@ -95,7 +98,9 @@ header {
 
 .dropdown-container:hover .range-dropdown {
     display: block;
-    /* background-color: darkmagenta; */
+    background-color: rgba(62, 3, 120, 0.372);
+    border-radius: 4px;
+    backdrop-filter: blur(5px);
 }
 
 /*
@@ -107,21 +112,21 @@ header {
     border-left-color: green;
 }
 #oneToTwenty:hover {
-    background-color: green;
+    background-color: rgb(9, 205, 9);
 }
 #oneToFifty {
     border-left: 5px solid;
-    border-left-color: yellow;
+    border-left-color: rgb(194, 194, 1);
 }
 #oneToFifty:hover {
-    background-color: yellow;
+    background-color: rgb(238, 244, 48);
 }
 #oneToHundred {
     border-left: 5px solid;
-    border-left-color: red;
+    border-left-color: rgb(182, 4, 4);
 }
 #oneToHundred:hover {
-    background-color: red;
+    background-color: rgb(255, 0, 0);
 }
 /* DROPDOWN END */
 
@@ -137,9 +142,14 @@ h2 {
     
 }
 .secret-number {
-    font-size: 6rem;
+    font-size: 8rem;
     text-align: center;
-
+    text-shadow: 2px 3px #f1ecec3f;
+    /* filter: blur(1px); */
+    /* outline: 2px solid red; */
+    width: 20rem;
+    padding: 8px 0;
+    /* box-shadow: 5px 3px 5px #c4baba; */
 }
 .play-again {
     align-self: flex-start;
@@ -147,12 +157,15 @@ h2 {
 button {
     border: none;
     border-radius: 5px;
-    padding: 4px;
+    padding: 4px 6px;
     font-size: 1.6rem;
     font-weight: 800;
     cursor: pointer;
-
+    background-color: #5b5858;
+    color: #fff;
+    /* letter-spacing: 1px; */
 }
+
 
 /* ---------------------------------MIDDLE PART--------------------------------------- */
 /* second part */
@@ -160,7 +173,7 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 52%;
+    height: 47%;
     font-size: 2rem;
     padding: 0 10%;
     /* background-color: orange; */
@@ -228,6 +241,7 @@ button {
     transform: translate(-50%, -50%);
     background-color: #b32f2f76;
     height: 50%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     overflow: auto;
@@ -238,7 +252,10 @@ button {
 }
 .pop-up p, .pop-up h3 {
     margin-bottom: 15px;
-    
+}
+.pop-up > .info  p {
+    font-size: 1.8rem;
+    line-height: 22px;
 }
 .blur {
     position: absolute;
