--- a/style.css
+++ b/style.css
@@ -1,62 +1,63 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    /* outline: 2px solid red; */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* outline: 2px solid red; */
 }
 html {
-    font-size: 60%;
-    --fontColor: rgb(255, 255, 255);
-    height: 100vh;
+  font-size: 60%;
+  --fontColor: rgb(255, 255, 255);
+  height: 100vh;
 }
 body {
-    font-family: sans-serif;
-    font-weight: 500;
-    color: #fff;
-    height: 100%;
-    width: 100vw;
-    overflow: hidden;
-    /* background-color: rgb(53, 52, 52); */
-    background-image: linear-gradient(to top left, #7d6cb5, #6f07f7);
-    /* border: 2px solid red; */
-    /* background-color: ; */
+  font-family: sans-serif;
+  font-weight: 500;
+  color: #fff;
+  height: 100%;
+  width: 100vw;
+  overflow: hidden;
+  /* background-color: rgb(53, 52, 52); */
+  background-image: linear-gradient(to top left, #7d6cb5, #6f07f7);
+  /* border: 2px solid red; */
+  /* background-color: ; */
 }
-header, main, footer {
-    width: 90%;
-    margin: 20px auto;
-    
+header,
+main,
+footer {
+  width: 90%;
+  margin: 20px auto;
 }
-button:active, 
+button:active,
 .between:active,
 .close-btn:active {
-    transform: translateY(2px);
+  transform: translateY(2px);
 }
 
 /* ---------------------------------TOP PART--------------------------------------- */
 header {
-    display: flex;
-    flex-direction: column;
-    /* flex-wrap: wrap; */
-    /* justify-content: space-between */;
-    height: 35%;
-    font-size: 1.8rem;
-    /* outline: 2px solid red; */
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  /* justify-content: space-between */
+  height: 35%;
+  font-size: 1.8rem;
+  /* outline: 2px solid red; */
 }
 .first-division {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding-bottom: 5px;
-    z-index: 1;
-    /* background-color: yellow; */
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding-bottom: 5px;
+  z-index: 1;
+  /* background-color: yellow; */
 }
 .second-division {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 100%;
-    /* background-color: green; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100%;
+  /* background-color: green; */
 }
 
 /* DROPDOWN START */
@@ -66,41 +67,45 @@ header {
     position: relative;
 } */
 .range-dropdown {
-    position: absolute;
-    top: 4.3rem;
-    display: none;
-    width: max-content;
-    /* background-color: blue; */
-    
+  position: absolute;
+  top: 4.3rem;
+  display: none;
+  width: max-content;
+  /* background-color: blue; */
 }
 .range {
-    color: rgb(0, 0, 0);
-    font-weight: 600;
-    cursor: pointer;
+  color: rgb(0, 0, 0);
+  font-weight: 800;
+  cursor: pointer;
+
+  background-color: rebeccapurple;
+  padding: 4px 6px;
+  border-radius: 5px;
+  color: #fff;
 }
 .range:hover {
-    border-bottom: 4px solid #6f07f7;
-    width: 18.78rem;
+  border-bottom: 4px solid #6f07f7;
+  /* width: 18.78rem; */
 }
 .between {
-    display: block;
-    margin: 0 5px 15px;
-    padding: 4px 8px;
-    line-height: 24px;
-    background-color: none;
-    cursor: pointer;
-    /* border-radius: 5px; */
-    transition: all 0.55 ease-in linear;
+  display: block;
+  margin: 0 5px 15px;
+  padding: 4px 8px;
+  line-height: 24px;
+  background-color: none;
+  cursor: pointer;
+  /* border-radius: 5px; */
+  transition: all 0.55 ease-in linear;
 }
 .between:first-child {
-    margin-top: 8px;
+  margin-top: 8px;
 }
 
 .dropdown-container:hover .range-dropdown {
-    display: block;
-    background-color: rgba(62, 3, 120, 0.372);
-    border-radius: 4px;
-    backdrop-filter: blur(5px);
+  display: block;
+  background-color: rgba(62, 3, 120, 0.372);
+  border-radius: 4px;
+  backdrop-filter: blur(5px);
 }
 
 /*
@@ -108,340 +113,333 @@ header {
     display: block;
 } */
 #oneToTwenty {
-    border-left: 5px solid;
-    border-left-color: green;
+  border-left: 5px solid;
+  border-left-color: green;
 }
 #oneToTwenty:hover {
-    background-color: rgb(9, 205, 9);
+  background-color: rgb(9, 205, 9);
 }
 #oneToFifty {
-    border-left: 5px solid;
-    border-left-color: rgb(194, 194, 1);
+  border-left: 5px solid;
+  border-left-color: rgb(194, 194, 1);
 }
 #oneToFifty:hover {
-    background-color: rgb(238, 244, 48);
+  background-color: rgb(238, 244, 48);
 }
 #oneToHundred {
-    border-left: 5px solid;
-    border-left-color: rgb(182, 4, 4);
+  border-left: 5px solid;
+  border-left-color: rgb(182, 4, 4);
 }
 #oneToHundred:hover {
-    background-color: rgb(255, 0, 0);
+  background-color: rgb(255, 0, 0);
 }
 /* DROPDOWN END */
 
 h1 {
-    font-size: 4rem;
-    text-align: center;
+  font-size: 4rem;
+  text-align: center;
 }
 
 h2 {
-    font-size: 2.5rem;
-    text-align: center;
-    
-    
+  font-size: 2.5rem;
+  text-align: center;
 }
 .secret-number {
-    font-size: 8rem;
-    text-align: center;
-    text-shadow: 2px 3px #f1ecec3f;
-    /* filter: blur(1px); */
-    /* outline: 2px solid red; */
-    width: 20rem;
-    padding: 8px 0;
-    /* box-shadow: 5px 3px 5px #c4baba; */
+  font-size: 8rem;
+  text-align: center;
+  text-shadow: 2px 3px #f1ecec3f;
+  /* filter: blur(1px); */
+  /* outline: 2px solid red; */
+  width: 20rem;
+  padding: 8px 0;
+  /* box-shadow: 5px 3px 5px #c4baba; */
 }
 .play-again {
-    align-self: flex-start;
+  align-self: flex-start;
 }
 button {
-    border: none;
-    border-radius: 5px;
-    padding: 4px 6px;
-    font-size: 1.6rem;
-    font-weight: 800;
-    cursor: pointer;
-    background-color: #5b5858;
-    color: #fff;
-    /* letter-spacing: 1px; */
+  border: none;
+  border-radius: 5px;
+  padding: 4px 6px;
+  font-size: 1.6rem;
+  font-weight: 800;
+  cursor: pointer;
+  background-color: #5b5858;
+  color: #fff;
+  /* letter-spacing: 1px; */
 }
-
 
 /* ---------------------------------MIDDLE PART--------------------------------------- */
 /* second part */
 .content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 47%;
-    font-size: 2rem;
-    padding: 0 10%;
-    /* background-color: orange; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 47%;
+  font-size: 2rem;
+  padding: 0 10%;
+  /* background-color: orange; */
 }
 .bottomPart {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 #left {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* background-color: orangered; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* background-color: orangered; */
 }
 .pAgain {
-    display: none;
+  display: none;
 }
 .guesses {
-    width: 25rem;
-    height: 5rem;
-    padding: 5px;
-    border: none;
-    border-radius: 3px;
-    font-size: 3rem;
-    letter-spacing: 2px;
-    margin-bottom: 10px;
-    background-color: transparent;
-    border-bottom: 2px solid white;
-    border-radius: 0;
+  width: 25rem;
+  height: 5rem;
+  padding: 5px;
+  border: none;
+  border-radius: 3px;
+  font-size: 3rem;
+  letter-spacing: 2px;
+  margin-bottom: 10px;
+  background-color: transparent;
+  border-bottom: 2px solid white;
+  border-radius: 0;
 }
 .guesses:active {
-    border: none;
-    /* border-bottom: 2px solid #fff; */
-
+  border: none;
+  /* border-bottom: 2px solid #fff; */
 }
 #right {
-    width: 35rem;
-    /* background-color: violet; */
-
+  width: 35rem;
+  /* background-color: violet; */
 }
 #right p {
-    margin-bottom: 10px;
-
+  margin-bottom: 10px;
 }
 .message {
-    height: 50px;
-    padding: 5px 0;
+  height: 50px;
+  padding: 5px 0;
 }
 
 /* ---------------------------------BOTTOM PART--------------------------------------- */
 /* footer */
-#bottom { 
-    font-size: 1.5rem;
-    display: flex;
-    flex-direction: row;
-    align-items: last baseline;
-    justify-content: space-between;
-    height: 9vh;
-    /* background-color: aqua; */
+#bottom {
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: last baseline;
+  justify-content: space-between;
+  height: 9vh;
+  /* background-color: aqua; */
 }
 /* info and gameinfo */
 .pop-up {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #b32f2f76;
-    height: 50%;
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-    padding: 0 20px;
-    z-index: 4;
-    /* justify-content: space-evenly; */
-    /* width: 30rem; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #b32f2f76;
+  height: 50%;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  padding: 0 20px;
+  z-index: 4;
+  /* justify-content: space-evenly; */
+  /* width: 30rem; */
 }
-.pop-up p, .pop-up h3 {
-    margin-bottom: 15px;
+.pop-up p,
+.pop-up h3 {
+  margin-bottom: 15px;
 }
-.pop-up > .info  p {
-    font-size: 1.8rem;
-    line-height: 22px;
+.pop-up > .info p {
+  font-size: 1.8rem;
+  line-height: 22px;
 }
 .blur {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(57, 49, 49, 0.623);
-    /* filter: blur(10); */
-    width: 100vw;
-    height: 100vh;
-    backdrop-filter: blur(10px);
-    z-index: 3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(57, 49, 49, 0.623);
+  /* filter: blur(10); */
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(10px);
+  z-index: 3;
 }
 
 .close-btn {
-    /* position: relative; */
-    font-size: 5rem;
-    align-self: flex-end;
-    justify-self: flex-start;
-    cursor: pointer;
-
+  /* position: relative; */
+  font-size: 5rem;
+  align-self: flex-end;
+  justify-self: flex-start;
+  cursor: pointer;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
-
 
 /* ---------------------------------MEDIA QUERY--------------------------------------- */
 @media screen and (max-width: 880px) {
-    body {
-        background-image: linear-gradient(to top left, #7d6cb5, #6f07f7);
-    }
-    /* ---------------------------------TOP PART--------------------------------------- */
-    h1 {
-        font-size: 3rem;
-    }
-    h2 {
-        font-size: 2rem;
-    }
-    .secret-number {
-        font-size: 4rem;
-    }
-    
-    .dropdown-container {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 60%;
-        height: 100%;
-        background-color: #67059bf0;
-        z-index: 2;
-    }
-    .range {
-        padding: 29px 5px;
-        color: #fff;
-    }
-    .range:hover {
-        border-bottom: none;
-    }
-    .range-dropdown {
-        display: block;
-        font-size: 1.5rem;
-        font-weight: 100;
-        position: initial;
-        
-    }
-    .dropdown-container:hover .range-dropdown {
-        background-color: initial;
-        backdrop-filter: initial;
-    }
-    .slider {
-        display: none;
-    }
-    .custom-shape-divider-top-1689986374 {
-        display: none;
-    }
+  body {
+    background-image: linear-gradient(to top left, #7d6cb5, #6f07f7);
+  }
+  /* ---------------------------------TOP PART--------------------------------------- */
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
+  .secret-number {
+    font-size: 4rem;
+  }
 
-    /* ---------------------------------MIDDLE PART--------------------------------------- */
-    .content {
-        flex-direction: column;
-        flex-direction: column-reverse;
-        justify-content: space-evenly;
-        height: 45vh;
-        padding: 0;
-        /* background-color: gray; */
-    }
-    #right {
-        width: 100%;
-        /* background-color: gold; */
-    }
-    #left {
-        width: 100%;
-    }
-    .play-again {
-        display: none;
-    }
-    .left-buttons {
-        width: 100%;
-        display: flex;
-        justify-content: space-evenly;
-    }
-    /* .check {
+  .dropdown-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60%;
+    height: 100%;
+    background-color: #67059bf0;
+    z-index: 2;
+  }
+  .range {
+    padding: 29px 5px;
+    color: #fff;
+  }
+  .range:hover {
+    border-bottom: none;
+  }
+  .range-dropdown {
+    display: block;
+    font-size: 1.5rem;
+    font-weight: 100;
+    position: initial;
+  }
+  .dropdown-container:hover .range-dropdown {
+    background-color: initial;
+    backdrop-filter: initial;
+  }
+  .slider {
+    display: none;
+  }
+  .custom-shape-divider-top-1689986374 {
+    display: none;
+  }
+
+  /* ---------------------------------MIDDLE PART--------------------------------------- */
+  .content {
+    flex-direction: column;
+    flex-direction: column-reverse;
+    justify-content: space-evenly;
+    height: 45vh;
+    padding: 0;
+    /* background-color: gray; */
+  }
+  #right {
+    width: 100%;
+    /* background-color: gold; */
+  }
+  #left {
+    width: 100%;
+  }
+  .play-again {
+    display: none;
+  }
+  .left-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+  /* .check {
         position: relative;
         left: -100%;
     } */
-    .pAgain {
-        display: inline-block;
-    }
-    .dbl-tap {
-        position: absolute;
-        bottom: 7.5%;
-        left: 8px;
-        width: 95%;
-        height: 9%;
-        /* outline: 2px solid red; */
-    }
-    .guesses {
-        width: 100%;
-        
-    }
-    .message {
-        padding: 0 25px;
-    }
-    .scoreText,
-    .message,
-    .highscoreText {
-        text-align: center;
-    }
-        /* ---------------------------------BOTTOM PART--------------------------------------- */
+  .pAgain {
+    display: inline-block;
+  }
+  .dbl-tap {
+    position: absolute;
+    bottom: 7.5%;
+    left: 8px;
+    width: 95%;
+    height: 9%;
+    /* outline: 2px solid red; */
+  }
+  .guesses {
+    width: 100%;
+  }
+  .message {
+    padding: 0 25px;
+  }
+  .scoreText,
+  .message,
+  .highscoreText {
+    text-align: center;
+  }
+  /* ---------------------------------BOTTOM PART--------------------------------------- */
 
-    .pop-up {
-        width: 80%;
-        padding: 0 20px;
-        -ms-overflow-style: none;
-        scrollbar-width: none;
-    }
-    .pop-up::-webkit-scrollbar {
-        display: none;
-    }
-    .pop-up p, .pop-up h3 {
-        margin-bottom: 15px;
-        
-    }
-
-
+  .pop-up {
+    width: 80%;
+    padding: 0 20px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .pop-up::-webkit-scrollbar {
+    display: none;
+  }
+  .pop-up p,
+  .pop-up h3 {
+    margin-bottom: 15px;
+  }
 }
 /* ---------------------------------MEDIA QUERY for smaller screens--------------------------------------- */
 @media screen and (max-width: 200px) {
-    .left-buttons {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        height: 9vh;
-        /* background-color: red; */
-    }
-    .left-buttons button {
-        font-size: 1.2rem;
-    }
-    .left-buttons button:last-child {
-        align-self: center;
-        margin: 0;
-        /* background-color: blue; */
-    } 
-    
+  .left-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 9vh;
+    /* background-color: red; */
+  }
+  .left-buttons button {
+    font-size: 1.2rem;
+  }
+  .left-buttons button:last-child {
+    align-self: center;
+    margin: 0;
+    /* background-color: blue; */
+  }
 }
-
 
 /* ---------------------------------SVG BANNER--------------------------------------- */
 
 .custom-shape-divider-top-1689986374 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
 }
 
 .custom-shape-divider-top-1689986374 svg {
-    position: relative;
-    display: block;
-    width: calc(100% + 1.3px);
-    height: 150px;
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 150px;
 }
 
 .custom-shape-divider-top-1689986374 .shape-fill {
-    fill: #FFFFFF;
+  fill: #ffffff;
+}
+
+/* --------------------------------- General button styles --------------------------------------- */
+.range,
+button {
+  background-color: rebeccapurple;
 }
