--- a/style.css
+++ b/style.css
@@ -112,25 +112,31 @@ header {
 .range:hover + .range-dropdown {
     display: block;
 } */
-#oneToTwenty {
+#oneToTwenty,
+.oneToTwenty {
   border-left: 5px solid;
   border-left-color: green;
 }
-#oneToTwenty:hover {
+#oneToTwenty:hover,
+.oneToTwenty:hover {
   background-color: rgb(9, 205, 9);
 }
-#oneToFifty {
+#oneToFifty,
+.oneToFifty {
   border-left: 5px solid;
   border-left-color: rgb(194, 194, 1);
 }
-#oneToFifty:hover {
+#oneToFifty:hover,
+.oneToFifty:hover {
   background-color: rgb(238, 244, 48);
 }
-#oneToHundred {
+#oneToHundred,
+.oneToHundred {
   border-left: 5px solid;
   border-left-color: rgb(182, 4, 4);
 }
-#oneToHundred:hover {
+#oneToHundred:hover,
+.oneToHundred:hover {
   background-color: rgb(255, 0, 0);
 }
 /* DROPDOWN END */
@@ -238,7 +244,7 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #b32f2f76;
+  background-color: #7d6cb5;
   height: 50%;
   width: 70%;
   display: flex;
@@ -246,6 +252,8 @@ button {
   overflow: auto;
   padding: 0 20px;
   z-index: 4;
+  border-radius: 20px;
+  box-shadow: 2px 2px 51px 1px #2f2f2f;
   /* justify-content: space-evenly; */
   /* width: 30rem; */
 }
@@ -256,6 +264,9 @@ button {
 .pop-up > .info p {
   font-size: 1.8rem;
   line-height: 22px;
+}
+.game-level_container {
+  display: none;
 }
 .blur {
   position: absolute;
@@ -296,7 +307,7 @@ button {
   .secret-number {
     font-size: 4rem;
   }
-
+/* START OF MOBILE NAV STYLES */
   .dropdown-container {
     position: absolute;
     top: 0;
@@ -326,6 +337,8 @@ button {
   .slider {
     display: none;
   }
+  /* END OF MOBILE NAV STYLES */
+
   .custom-shape-divider-top-1689986374 {
     display: none;
   }
@@ -394,6 +407,9 @@ button {
   .pop-up p,
   .pop-up h3 {
     margin-bottom: 15px;
+  }
+  .game-level_container {
+    display: block;
   }
 }
 /* ---------------------------------MEDIA QUERY for smaller screens--------------------------------------- */
